# zapp-test

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Makefile  PROJECT.md  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: backend-engineer.md  devops-engineer.md  eval-engineer.md  frontend-engineer.md  implementation-orchestrator.md  observability-engineer.md  spec-generator.md
.claude/commands/: design.md  eval-run.md  implement.md  plan-tasks.md  specify.md  verify.md
.claude/hooks/: README.md  require-spec.sh  ruff-format.sh
.claude/skills/agent-prompting/: SKILL.md
.claude/skills/ears-templates/: SKILL.md
.claude/skills/eval-suite-patterns/: SKILL.md
.claude/skills/fastapi-sqlmodel/: SKILL.md
.claude/skills/json-contract/: SKILL.md
.claude/skills/pgvector-rag/: SKILL.md
.claude/skills/pydantic-ai-conventions/: SKILL.md
.github/workflows/: ci.yml
backend/: .dockerignore  CLAUDE.md  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_conversation_session.py  0003_session_history.py  0004_session_grade.py  0005_faq_rag.py  0006_faq_history.py  0007_events.py  0008_events_history.py
backend/app/: config.py  contract.py  db.py  deps.py  main.py  observability.py  time.py
backend/app/agents/: __init__.py  events.py  faq.py  orchestrator.py  session.py
backend/app/api/: chat.py  documents.py  events.py  health.py
backend/app/eval/: __init__.py  runtime.py
backend/app/events/: __init__.py  ics.py  models.py
backend/app/fusion/: __init__.py  geo.py  reconcile.py
backend/app/guardrails/: __init__.py  adapter.py  detectors.py  engine.py  llm.py  refusal.py
backend/app/lang/: detector.py  fusion.py  pipeline.py  state.py
backend/app/rag/: __init__.py  embeddings.py  ingest.py  models.py  retrieve.py
backend/evals/: README.md  config.py  evaluators.py  judge.py  report.py  run.py  task.py
backend/evals/datasets/: adversarial.yaml  fusion.yaml  happy.yaml  multilingual.yaml
backend/evals/reports/: example-report.md
backend/tests/: conftest.py  test_chat_degrade.py  test_chat_geo_boundary.py  test_chat_guardrails_block.py  test_chat_guardrails_paths.py  test_chat_multilingual.py  test_chat_stub.py  test_config.py  test_contract.py  test_detector.py  test_documents.py  test_embeddings.py  test_eval_run.py  test_evaluators.py  test_events.py  test_faq_agent.py  test_faq_memory.py  test_fusion.py  test_geo_service.py  test_guardrails_adapter.py  test_guardrails_detectors.py  test_guardrails_engine.py  test_guardrails_llm.py  test_guardrails_wiring.py  test_health.py  test_ingest.py  test_judge.py  test_lang_pipeline.py  test_multilingual_015.py  test_orchestrator_rag.py  test_reconcile.py  test_retrieve.py  test_runtime_eval.py  test_state.py  test_switch_end_tools.py  test_task_geo.py
frontend/: .dockerignore  .env.local.example  CLAUDE.md  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: admin-console.part1.test.tsx  admin-console.part2.test.tsx  chat-usability.test.tsx  contract.test.ts  details-on.test.tsx  events-admin.test.tsx  shell.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/components/admin/: AdminConsole.tsx  DeleteConfirm.tsx  DocumentCard.tsx  DocumentList.tsx  DocumentsManager.tsx  EventForm.tsx  EventList.tsx  StatusPill.tsx  Toaster.tsx  TokenGate.tsx  UploadDropzone.tsx
frontend/components/chat/: ChatShell.tsx  Composer.tsx  EmptyState.tsx  MessageTurn.tsx  ThinkingTurn.tsx  Transcript.tsx
frontend/components/chat/contract/: DetailsDisclosure.tsx  DetectedLangHint.tsx  GuardrailNote.tsx  LangIndicator.tsx  ReviewMarker.tsx
frontend/lib/: adminApi.ts  api.ts  contract.ts  flags.ts  session.ts  validateFile.ts
frontend/lib/hooks/: useChat.ts  useDocuments.ts  useEvents.ts
frontend/lib/i18n/: en.ts  es.ts  index.ts  pt.ts
scripts/: smoke.sh
specs/: CLAUDE.md  constitution.md
specs/admin-console/: design.md  requirements.md  tasks.md
specs/evaluation/: design.md  requirements.md  tasks.md
specs/events/: design.md  requirements.md  tasks.md
specs/faq-rag/: design.md  requirements.md  tasks.md
specs/frontend-shell/: design.md  requirements.md  tasks.md
specs/guardrails/: design.md  requirements.md  tasks.md
specs/multilingual/: design.md  requirements.md  tasks.md
specs/orchestrator-and-fusion/: design.md  requirements.md  tasks.md
specs/platform-scaffold/: design.md  requirements.md  tasks.md
