[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "logfire>=4.37.0",
    "pgvector>=0.4.2",
    "posthog>=7.20.5",
    "pydantic-ai>=2.0.0",
    "pydantic-ai-guardrails[evals,telemetry]>=0.2.2",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.14.2",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]
