[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "ics>=0.7.3",
    "lingua-language-detector>=2.2.0",
    "logfire>=4.37.0",
    "pgvector>=0.4.2",
    "posthog>=7.20.5",
    "psycopg2-binary>=2.9.12",
    "pycountry>=26.2.16",
    "pydantic-ai>=2.0.0",
    "pydantic-ai-guardrails[evals,telemetry]>=0.2.2",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "greenlet>=3.5.2",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

# --- Tool config (hand-written; NOT dependencies) ---
# Ruff is BOTH the linter and the formatter for this project — do NOT add
# black / isort / flake8. `ruff check` lints (incl. import sorting via `I`);
# `ruff format` formats.
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, B bugbear, UP pyupgrade,
# ASYNC async-lints, SIM flake8-simplify, RUF ruff-native rules.
# C901: mccabe cyclomatic complexity gate — blocks future deeply-nested functions.
# PLR0912/PLR0913/PLR0915: pylint-refactor rules for branches/args/statements — block
# future "god function" growth like the 242-line chat() monolith we refactored.
select = ["E", "F", "W", "I", "B", "UP", "ASYNC", "SIM", "RUF", "C901", "PLR0912", "PLR0913", "PLR0915"]

# ---------------------------------------------------------------------------
# Function-complexity / size thresholds
# Calibrated to the current post-refactor codebase so `ruff check` is green
# on clean code while still failing a future 200-line / deeply-nested function.
# To change a threshold: document the function that forced the bump + line count.
# ---------------------------------------------------------------------------

[tool.ruff.lint.mccabe]
# Default ruff max is 10; 12 gives moderate headroom while still blocking
# deeply-nested logic. No current function exceeds complexity 10 — verified via
# `ruff check --select C901 --config lint.mccabe.max-complexity=10 .` → clean.
max-complexity = 12

[tool.ruff.lint.pylint]
# max-args bumped from default 5 → 10 to accommodate three post-refactor helpers
# in app/api/chat.py that split the 242-line chat() monolith:
#   _run_orchestrator_turn (10 kw-only args after *) — the binding constraint
#   _blocked_turn          ( 8 kw-only args after *)
#   _build_agent_deps      ( 7 positional args)
# All use keyword-only args (*, arg) which is good practice but still counted by
# PLR0913. Raising above 10 would need fresh justification.
max-args = 10

# max-branches at ruff default (12). No current function exceeds this.
max-branches = 12

# max-statements bumped from default 50 → 66 to accommodate evals/run.py
# _compute_metrics() (66 statements). It is a dense but LINEAR metrics-aggregation
# function (no deep nesting). A future function with 67+ statements still fails.
max-statements = 66

# max-returns at ruff default (6). No current function exceeds this.
max-returns = 6

[tool.mypy]
python_version = "3.12"
strict = true
# Pydantic / PydanticAI models need this plugin to type-check correctly.
plugins = ["pydantic.mypy"]
# Scope to the `app` package for now. (The `evals` package does not exist yet.)
files = ["app"]

# Relax third-party libs that ship no type stubs so `strict` does not flag them.
[[tool.mypy.overrides]]
module = [
    "pgvector.*",
    "posthog.*",
]
ignore_missing_imports = true

# evals.* is a sibling local package (backend/evals/) consumed by app/eval/runtime.py.
# It is not in mypy `files` scope and may import untyped libraries (pydantic_evals).
# Using ignore_missing_imports + follow_imports=silent keeps mypy green without
# polluting app/ source files with per-line ignores.
[[tool.mypy.overrides]]
module = ["evals.*"]
ignore_missing_imports = true
follow_imports = "silent"

[tool.logfire]
ignore_no_config = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
